--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,42 @@
 
-/* You
+.styled-table {
+    border-collapse: collapse;
+    border: 1px solid black;
+    overflow: hidden;
+    text-align: left;
+  }
+  .styled-table thead tr {
+    text-align: left;
+      background-color:rgb(199, 45, 45);
+    color: #ffffff;
+  
+  }
+  .styled-table th,
+  .styled-table td {
+    padding: 10px 30px;
+    text-align: right;
+      border: 1px solid black;
+  }
+  .class-1{
+    background-color: rgb(240, 122, 122);
+    color: white;
+
+  }
+  .class-2{
+    background-color: rgb(222, 206, 206);
+
+  }
+  .class-3{
+    background-color: rgb(198, 196, 196);
+
+  }
+  .id-1{
+    text-align: left;
+  }
+  
+  
+  
+  
+
+  
+  
